# voice-vibe

./: .gitignore  CLAUDE.md  Makefile  main.py  pyproject.toml
.playwright-cli/: page-2026-05-15T04-33-02-218Z.yml  page-2026-05-15T04-34-30-999Z.yml  page-2026-05-15T04-36-44-404Z.yml
benchmark/: __init__.py  __main__.py  config.py  dataset.py  metrics.py  pipeline.py  report.py  runner.py
docs/superpowers/plans/: 2026-05-11-vad-module.md
docs/superpowers/specs/: 2026-05-11-vad-module-design.md
openspec/changes/benchmark-framework/: design.md  proposal.md  tasks.md
ralph/: .last-branch  prd.json  progress.txt
scripts/ralph/: .last-branch  prd.json  progress.txt
tasks/: prd-frontend-audio-file-test.md  prd-voice-to-llm-streaming.md  prd-voice-waveform-state-control.md
tests/: conftest.py  test_audio_broadcaster.py  test_benchmark.py  test_llm.py  test_transcribe.py  test_vad.py  test_vad_asr_integration.py
voicevibe/: __init__.py  audio_broadcaster.py  config.py  logger.py  types.py
voicevibe/audio_player/: __init__.py  audio_player.py
voicevibe/audio_recorder/: __init__.py  audio_recorder.py  audio_recorder_port.py
voicevibe/frontend/: __init__.py  app.py  audio_file_streamer.py
voicevibe/llm/: exceptions.py  format.py  message_utils.py  types.py
voicevibe/transcribe/: __init__.py  mistral_transcribe_client.py  transcribe_client_port.py
voicevibe/tts/: __init__.py  factory.py  mistral_tts_client.py  tts_client_port.py
voicevibe/utils/: __init__.py  tags.py
voicevibe/vad/: __init__.py  events.py  simple_vad.py  vad_port.py
(+13 files in other folders)
