[project]
name = "voice-vibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mistralai[realtime]==2.1.3",
  "sounddevice>=0.5.1",
  "httpx[socks]>=0.28.1",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "tomli-w>=1.2.0",
]
