[project]
name = "voice-vibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mistralai[realtime]==2.1.3",
  "sounddevice>=0.5.1",
  "httpx[socks]>=0.28.1",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "tomli-w>=1.2.0",
  "gradio>=6.11.0",
  "maplibre[shiny]>=0.3.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["voicevibe*", "benchmark*"]

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
